# Cloud-Haskell-Sandbox

./: pingpong.cabal  stack.yaml
app/: Main.hs
src/: DistributedPingPong.hs  Logger.hs  PingPong.hs  SimpleHello.hs  SimplePingPong.hs  SlaveRecognition.hs
