name:                pingpong
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rabbitonweb/Cloud-Haskell-Sandbox/blob/master/README.md
license:             BSD3
license-file:        LICENSE
author:              Pawel Szulc
maintainer:          paul.szulc@gmail.com
copyright:           2017 Pawel Szulc
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleHello, SimplePingPong, PingPong, SlaveRecognition, DistributedPingPong
  build-depends:       base >= 4.7 && < 5
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , network-transport >= 0.5.2
                     , network-transport-tcp
                     , binary
  default-language:    Haskell2010

executable pingpong-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pingpong
  default-language:    Haskell2010

test-suite pingpong-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pingpong
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rabbitonweb/Cloud-Haskell-Sandbox
